# gradbench

./: .clang-format  .clangd  .dockerignore  .git-blame-ignore-revs  .gitignore  .prettierignore  ADBENCH.md  ADBench_Functions.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Manifest.toml  Project.toml  README.md  build.sh  buildeval.sh  buildtool.sh  cross.sh  crosseval.sh  crosstool.sh  eval.sh  flake.nix  foo.json  gradbench  gradbench.adroit  gradbench.json  gradbench.ps1  gradbench.sh  hello.json  input.txt  ir.schema.json  list.py  manual.sh  matrix.py  output.txt  package-lock.json  package.json  pyproject.toml  run-pretty.py  run.py  (+7 more)
.github/: errors.py  matrix.py  release.py  summarize.py
cpp/: .gitignore  Makefile  README.md  common.mk
crates/adroit/: Cargo.toml
crates/adroit/src/: cli.rs  compile.rs  fetch.rs  graph.rs  ir.rs  jit.rs  lex.rs  lsp.rs  main.rs  parse.rs  range.rs  typecheck.rs  util.rs
crates/adroit/src/modules/: array.adroit  math.adroit
crates/adroit/src/pprint/: mod.rs
crates/adroit/src/pprint/input/: apply.adroit  def_bind_unit.adroit  def_type.adroit  left_associative.adroit  let_multiple.adroit  let_nested.adroit  let_pair_types.adroit  let_semicolon.adroit  let_type.adroit  param_pair.adroit  param_triple.adroit  param_type.adroit  param_untyped.adroit
crates/adroit/src/pprint/output/: apply.adroit  curry.adroit  def_bind_unit.adroit  def_param_multiple.adroit  def_type.adroit  left_associative.adroit  let_newline.adroit  let_pair.adroit  let_pair_types.adroit  let_triple.adroit  let_type.adroit  param_pair.adroit  param_untyped.adroit
crates/adroit/src/typecheck/: mod.rs
crates/adroit/src/typecheck/errors/: add_lhs.adroit  add_rhs.adroit  ambig_param.adroit  ambig_type_args.adroit  apply_disagree.adroit  bind_disagree.adroit  def_disagree.adroit  def_untyped.adroit  def_untyped_param.adroit  div_lhs.adroit  div_rhs.adroit  elem_disagree.adroit  index.adroit  lambda_disagree.adroit  let_disagree.adroit  map_lhs.adroit  map_rhs.adroit  mul_lhs.adroit  mul_rhs.adroit  neg.adroit  too_many_type_args.adroit  undefined.adroit
crates/gradbench/: Cargo.toml
crates/gradbench/src/: cli.rs  intermediary.rs  json.rs  lex.rs  lib.rs  lint.rs  log.rs  main.rs  parse.rs  pprint.rs  protocol.rs  range.rs  stats.rs  typecheck.rs  util.rs
crates/gradbench/src/inputs/eval/: contributing_md_example.jsonl  define_error.jsonl  evaluate.jsonl  evaluate_null_output.jsonl  intermediary_timeout.jsonl  start_names.jsonl
crates/gradbench/src/inputs/tool/: contributing_md_example.jsonl  define_error.jsonl  define_success_error.jsonl  define_timings.jsonl  evaluate_error.jsonl  evaluate_failure_no_error.jsonl  evaluate_null_output.jsonl  evaluate_success_error.jsonl  evaluate_success_no_output.jsonl  intermediary_timeout.jsonl  start_names.jsonl
crates/gradbench/src/modules/: autodiff.adroit
crates/gradbench/src/outputs/: contributing_md_example.txt  define_error.txt  define_success_error.txt  define_timings.txt  dry_run.sh  dry_run_download_github.sh  dry_run_output.sh  dry_run_timeout.sh  evaluate_error.txt  evaluate_failure_no_error.txt  evaluate_success_error.txt  evaluate_success_no_output.txt  evaluate_success_null_output.txt  invalid_json_eval.txt  invalid_json_tool.txt  readme_example.txt  start_names.txt  summary_noevaluations.txt  summary_noresponse.txt  summary_simple.txt  timeout.txt  trim_idempotence.jsonl  trim_missing_response.jsonl
crates/gradbench/src/parse/: leading_comment.adroit  mod.rs  unexpected_toplevel.adroit
crates/gradbench/src/pprint/: mod.rs
crates/gradbench/src/pprint/input/: curry.adroit  def_multiple.adroit  def_param_multiple.adroit
crates/gradbench/src/pprint/output/: apply.adroit  curry.adroit  def_multiple.adroit  def_param_multiple.adroit  left_associative.adroit  let_multiple.adroit  let_nested.adroit  let_pair.adroit  let_pair_types.adroit  let_triple.adroit  param_pair.adroit  param_triple.adroit  param_type.adroit
crates/gradbench/src/stats/: plot.rs
docs/: smoke-check.md
gradbench/: __init__.py
julia/: README.md
nix/: autodiff.nix  codipack.nix  common.nix  cppad.nix  floretta.nix  shell.nix  sources.json
run-ba-adol-c/: log.jsonl
run-ba-autograd/: log.json  log.jsonl
run-ba-cppad/: log.jsonl
run-ba-diffsharp/: log.json  log.jsonl
run-ba-enzyme/: log.jsonl
run-ba-finite/: log.json  log.jsonl
run-ba-floretta/: log.jsonl
run-ba-futhark/: log.json  log.jsonl
run-ba-haskell/: log.jsonl
run-ba-jax/: log.json  log.jsonl
run-ba-manual/: log.json  log.jsonl
run-ba-mygrad/: log.json  log.jsonl
run-ba-pytorch/: log.json  log.jsonl
run-ba-scilean/: log.json  log.jsonl
run-ba-tapenade/: log.json  log.jsonl
run-ba-tensorflow/: log.json  log.jsonl
run-ba-zygote/: log.json  log.jsonl
run-gmm-adol-c/: log.jsonl
run-gmm-autograd/: log.json  log.jsonl
run-gmm-diffsharp/: log.json  log.jsonl
run-gmm-enzyme/: log.jsonl
run-gmm-floretta/: log.jsonl
run-gmm-haskell/: log.jsonl
run-gmm-jax/: log.json  log.jsonl
run-gmm-mygrad/: log.json  log.jsonl
run-gmm-scilean/: log.json  log.jsonl
run-gmm-tapenade/: log.json
run-gmm-zygote/: log.json  log.jsonl
run-hello-adept/: log.jsonl
run-hello-adol-c/: log.jsonl
run-hello-autograd/: log.json  log.jsonl
run-hello-cppad/: log.jsonl
scripts/: adept.nix  (+10 more)
tools/haskell/: Dockerfile  README.md  cabal.project  default.nix  evals.txt  gradbench.cabal
tools/haskell-horde-ad-symbolic/: README.md  evals.txt  gradbench.cabal
tools/haskell-horde-ad-symbolic/src/: Main.hs
tools/haskell-horde-ad-symbolic/src/GradBench/: LSE.hs  Particle.hs  Saddle.hs
tools/haskell/src/: Main.hs
tools/haskell/src/GradBench/: AnODE.hs  Det.hs  DetByMinor.hs  GD.hs  Hello.hs  KMeans.hs  LLSq.hs  LLSqObj.hs  LSE.hs  LogSumExp.hs  ODE.hs  Particle.hs  Saddle.hs
tools/horde-ad/: .stylish-haskell.yaml  Dockerfile  README.md  cabal.project  evals.txt  gradbench.cabal
tools/horde-ad/src/: Main.hs
tools/horde-ad/src/GradBench/: BA.hs  Det.hs  GD.hs  GMM.hs  Hello.hs  KMeans.hs  LLSq.hs  LSE.hs  LSTM.hs  ODE.hs  Particle.hs  Saddle.hs
(+1113 files in other folders)
