[package]
name = "adroit"
version = "0.2.0"
publish = false
edition = "2021"

[dependencies]
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
enumset = "1"
indexmap = "2"
itertools = "0.13"
line-index = "0.1"
logos = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

[dev-dependencies]
goldenfile = "1"
similar-asserts = "1"
