[package]
name = "adroit"
version = "0.2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "5"
enumset = "1"
indexmap = "2"
itertools = "0.13"
line-index = "0.1"
logos = "0.14"
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
goldenfile = "1"
similar-asserts = "1"
