[package]
name = "gradbench"
description = "Benchmarks for differentiable programming across languages and domains."
version = "0.0.0"
license = "MIT"
repository = "https://github.com/gradbench/gradbench"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
nix = { version = "0.29", features = ["process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timeout-readwrite = "0.4"
