[package]
name = "gradbench"
description = "Benchmarks for differentiable programming across languages and domains."
version = "0.0.0"
license = "MIT"
repository = "https://github.com/gradbench/gradbench"
edition = "2021"
default-run = "gradbench"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
indexmap = { version = "2", features = ["serde"] }
nix = { version = "0.29", features = ["process", "signal"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
timeout-readwrite = "0.4"

[dev-dependencies]
goldenfile = "1.7.2"
pretty_assertions = "1"
