cabal-version:      3.0
name:               gradbench
version:            0.1.0.0
homepage:           https://gradben.ch/
license:            MIT
author:             Troels Henriksen
maintainer:         athas@sigkill.dk
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

executable gradbench
  import:           warnings
  main-is:          Main.hs
  other-modules:    GradBench.Hello
--                      GradBench.KMeans
--                      GradBench.LLSq
                    GradBench.LSE
--                      GradBench.ODE
--                      GradBench.Det
--                      GradBench.Particle
--                      GradBench.Saddle
--                      GradBench.GD
  build-depends:    aeson, base, bytestring, clock, deepseq, horde-ad, ox-arrays, text, vector
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions: StrictData, TypeFamilies, TypeFamilyDependencies,
                      FunctionalDependencies, RecordWildCards, MultiWayIf,
                      DefaultSignatures, PatternSynonyms, NoStarIsType,
                      TypeData, TypeAbstractions
  other-extensions:   UnboxedTuples, CPP, ViewPatterns, OverloadedLists,
                      DeriveAnyClass, UndecidableInstances, AllowAmbiguousTypes,
                      QuantifiedConstraints, TemplateHaskell, DerivingVia,
                      ImpredicativeTypes,
                      OverloadedStrings
  ghc-options:      -rtsopts "-with-rtsopts=-A500m"
