cabal-version:      3.6
name:               gradbench
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Gradbench entry to horde-ad. A lot of this code is copied from https://github.com/gradbench/gradbench/tree/main/tools/haskell-ad and https://github.com/tomsmeding/ADBench/blob/accelerate/tools/Accelerate/src/
homepage:           https://gradben.ch/
license:            MIT
author:             Mikolaj Konarski and others
maintainer:         mikolaj.konarski@funktory.com
category:           Math
build-type:         Simple

executable gradbench
  main-is:          Main.hs
  other-modules:    GradBench.Det
                    GradBench.GD
                    GradBench.GMM
                    GradBench.Hello
                    GradBench.KMeans
                    GradBench.LLSq
                    GradBench.LSE
                    GradBench.ODE
                    GradBench.Particle
                    GradBench.Saddle
  build-depends:
      aeson
    , base
    , bytestring
    , clock
    , deepseq
    , ghc-typelits-knownnat >= 0.8.0 && < 1
    , ghc-typelits-natnormalise >= 0.8.1 && < 1
    , horde-ad
    , ox-arrays
    , text
    , vector
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions: StrictData, TypeFamilies, TypeFamilyDependencies,
                      FunctionalDependencies, RecordWildCards, MultiWayIf,
                      DefaultSignatures, PatternSynonyms, NoStarIsType,
                      TypeData, TypeAbstractions
  other-extensions:   UnboxedTuples, CPP, ViewPatterns, OverloadedLists,
                      DeriveAnyClass, UndecidableInstances, AllowAmbiguousTypes,
                      QuantifiedConstraints, TemplateHaskell, DerivingVia,
                      ImpredicativeTypes,
                      OverloadedStrings
  -- * Warnings and similar.
  ghc-options:        -Wall -Wcompat -Widentities -Wredundant-constraints -Wmissing-export-lists -Wpartial-fields -Wunused-packages -Wredundant-bang-patterns -Woperator-whitespace -Wredundant-strictness-flags -Wterm-variable-capture -Wmissed-specialisations
  ghc-options:        -Wmissing-poly-kind-signatures -Wmissing-role-annotations -Wno-unticked-promoted-constructors
  -- Disables a warning we can't yet fix:
  if impl(ghc >= 9.14)
    ghc-options:      -Wno-pattern-namespace-specifier
  ghc-options:        -fprint-explicit-kinds -fsimpl-tick-factor=200

  -- * Performance.
  -- This is supposedly risky, but prevents STG from creating thunks, #23848:
  ghc-options:        -fworker-wrapper-cbv
  -- These improve performance, but slow down compilation:
  if impl(ghc >= 9.12)
    ghc-options:      -fexpose-overloaded-unfoldings
  ghc-options:        -fspecialise-aggressively
  if impl(ghc >= 9.14)
    ghc-options:      -fpolymorphic-specialisation
  -- This one improves both performance and compilation speed:
  ghc-options:        -fkeep-auto-rules
  -- These improve performance to some extent:
  ghc-options:        -fdicts-cheap -flate-dmd-anal
  -- Twice the compilation time and no consistent performance boost:
  -- ghc-options      -flate-specialise
  -- 30% longer compilation for small and inconsistent performance benefits:
  -- ghc-options:     -O2

  -- * Misc.
  ghc-options:        -rtsopts -threaded
  -- Make GC more predictable in benchmarks.
  ghc-options:        "-with-rtsopts=-A0.75g -I0"
  -- Too big a performance hit:
  -- ghc-options:        "-with-rtsopts=-H1.5g -A0.75g -I0"
